Very minor changes (throttle limits reduced, add dotenv gem, edit README)

--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,6 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /config/credentials.yml.enc
+*.env
 
 turnip_api.code-workspace
